# learn-langchain

./: README.md  pyproject.toml  sentence_shortener.py
src/: sentence_shortener.py
src/101/: README.md  main.py
src/102/: main.py
